public/css/style.css
body {
  font-family: "Montserrat", sans-serif;
  margin: 0;
  padding: 0;
  height: 100%;
}

footer {
  background-color: lightgrey;
  width: 100%;
}

.flex {
  display: flex;
}

#home {
  background-color: #14213D;
  color: #ffffff;
}

#name {
  color: #FF8811;
}

.row {
  flex-direction: row;
}

.icon-wrap {
  justify-content: center;
}

.center-items {
  justify-content: center;
  align-items: center;
}

.icon {
  font-size: 36px;
  color: black;
  margin: 0.4em;
  padding: 0.2em;
}

.icon:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

.navbar {
  background-color: #14213D;
  display: flex;
  width: 100%;
  position: fixed;
  top: 0px;
  display: none;
}

.spacer {
  display: inline-block;
  flex-grow: 1;
}

.navbar a {
  color: #ffffff;
  display: inline-block;
  font-size: 20px;
  text-transform: uppercase;
  padding: 10px;
  text-decoration: none;
}

.navbar a:hover {
  color: #ffffff;
}

.footnote {
  text-align: center;
}

.full-height {
  height: 100vh;
}

